# nano-bot

./: .gitignore  Cargo.toml  README.md
assets/: actions.yaml  say_hi.yaml
src/: event_handler.rs  main.rs  test.rs  utils.rs
src/commands/: action.rs  help.rs  hug.rs  mod.rs  say_hi.rs
