[package]
name = "nano-bot"
version = "0.1.0"
edition = "2021"
authors = ["Luna Borella"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
rand = "0.8.5"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
serenity = { version = "0.12.1", features = ["utils"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
